// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes should render "/" page 1`] = `
<DocumentFragment>
  <div>
    issues-page
  </div>
</DocumentFragment>
`;

exports[`routes should render "/about" page 1`] = `
<DocumentFragment>
  <div>
    about-page
  </div>
</DocumentFragment>
`;

exports[`routes should render "/issue/1" page 1`] = `
<DocumentFragment>
  <div>
    issue-page
  </div>
</DocumentFragment>
`;
